--- a/theme/package.json
+++ b/theme/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "gatsby-theme-julia",
-  "author": "Niklas Metje <hi@niklasmtj.de>",
+  "name": "gatsby-theme-minimal-me",
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/niklasmtj/gatsby-theme-julia.git"
+    "url": "https://github.com/gingerich/gatsby-theme-minimal-me.git"
   },
   "version": "1.0.1",
   "main": "index.js",
